--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:background="#D9E9FF"
     tools:context=".MainActivity">
 
-    <!-- دکمه افزودن تراکنش -->
     <Button
         android:id="@+id/btnAddTransaction"
         android:layout_width="match_parent"
@@ -21,11 +20,12 @@
 
     <!-- سربرگ جدول -->
     <LinearLayout
+        android:id="@+id/headerRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#B3D4FF"
-        android:padding="6dp">
+        android:paddingVertical="8dp"
+        android:background="#BBDEFB">
 
         <TextView
             android:layout_width="0dp"
@@ -33,8 +33,8 @@
             android:layout_weight="1"
             android:text="تاریخ"
             android:textColor="#000000"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
@@ -42,8 +42,8 @@
             android:layout_weight="1"
             android:text="مبلغ (ریال)"
             android:textColor="#000000"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
@@ -51,20 +51,19 @@
             android:layout_weight="1"
             android:text="بابت"
             android:textColor="#000000"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="توضیحات"
             android:textColor="#000000"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- لیست تراکنش‌ها -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -73,7 +72,6 @@
         android:scrollbars="vertical"
         tools:listitem="@layout/item_transaction" />
 
-    <!-- نمایش مانده -->
     <TextView
         android:id="@+id/tvBalance"
         android:layout_width="match_parent"
