--- a/app/src/main/res/menu/menu_transaction_item.xml
+++ b/app/src/main/res/menu/menu_transaction_item.xml
@@ -7,6 +7,6 @@
         android:id="@+id/action_delete"
         android:title="حذف" />
     <item
-        android:id="@+id/action_reorder"
+        android:id="@+id/action_move"
         android:title="جابجایی" />
 </menu>
