--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -54,6 +54,32 @@
             android:padding="10dp"
             android:layout_marginBottom="16dp" />
 
+        <!-- انتخاب نوع تراکنش -->
+        <RadioGroup
+            android:id="@+id/radioGroupType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="16dp">
+
+            <RadioButton
+                android:id="@+id/rbExpense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="هزینه"
+                android:checked="true"
+                android:textColor="@color/text_dark"
+                android:layout_marginEnd="20dp" />
+
+            <RadioButton
+                android:id="@+id/rbIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="درآمد"
+                android:textColor="@color/text_dark" />
+        </RadioGroup>
+
         <Button
             android:id="@+id/btnSave"
             android:layout_width="match_parent"
