--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- تم اصلی آبی ملایم هماهنگ با طراحی فعلی -->
-    <color name="app_background">#E6F0FF</color> <!-- خیلی روشن -->
-    <color name="list_background">#D0E4FF</color> <!-- ملایم‌تر از زمینه -->
-    <color name="header_background">#B3D4FF</color> <!-- پررنگ‌تر از لیست -->
-    <color name="balance_background">#B3D4FF</color> <!-- همان رنگ سربرگ -->
-    <color name="button_blue">#0288D1</color> <!-- دکمه آبی مثل عکس -->
-    <color name="button_text">#FFFFFF</color>
-    <color name="text_dark">#000000</color>
+
+    <!-- 🎨 رنگ‌های اصلی برنامه دخل و خرج -->
+    <color name="app_background">#E8F2FF</color> <!-- زمینه کلی خیلی کمرنگ -->
+    <color name="list_background">#D0E4FF</color> <!-- پس‌زمینه لیست -->
+    <color name="header_background">#B5D2FF</color> <!-- پس‌زمینه سربرگ جدول -->
+    <color name="balance_background">#A3C6FF</color> <!-- پس‌زمینه مانده -->
+    <color name="button_blue">#1E88E5</color> <!-- رنگ دکمه‌ها (مثل دکمه افزودن) -->
+    <color name="button_text">#FFFFFF</color> <!-- رنگ نوشته دکمه -->
+    <color name="text_dark">#0D1B2A</color> <!-- رنگ متن تیره -->
+
+    <!-- 💰 رنگ‌های ویژه تراکنش‌ها -->
+    <color name="green_income">#2E7D32</color> <!-- سبز برای درآمد -->
+    <color name="red_expense">#C62828</color> <!-- قرمز برای هزینه -->
+
+    <!-- رنگ‌های خاکستری برای جزئیات و مرزها -->
+    <color name="divider_gray">#CCCCCC</color>
+    <color name="hint_gray">#777777</color>
+
 </resources>
