--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -20,7 +20,7 @@
         android:text="50000" />
 
     <TextView
-        android:id="@+id/textPurpose"
+        android:id="@+id/textCategory"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
