--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
         android:textColor="@color/button_text"
         android:layout_marginBottom="8dp" />
 
-    <!-- سربرگ جدول -->
     <LinearLayout
         android:id="@+id/headerRow"
         android:layout_width="match_parent"
@@ -28,6 +27,7 @@
         android:background="@color/header_background">
 
         <TextView
+            android:id="@+id/headerDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -37,6 +37,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/headerAmount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -46,6 +47,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/headerCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -55,6 +57,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/headerDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -64,7 +67,6 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- لیست تراکنش‌ها -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -74,7 +76,6 @@
         android:scrollbars="vertical"
         tools:listitem="@layout/item_transaction" />
 
-    <!-- بخش مانده -->
     <TextView
         android:id="@+id/tvBalance"
         android:layout_width="match_parent"
