--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,35 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:orientation="horizontal"
+    android:padding="12dp"
+    android:gravity="center_vertical">
 
+    <!-- date -->
     <TextView
         android:id="@+id/textDate"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="1403/08/09" />
+        android:gravity="center"
+        android:text="1404/08/01" />
 
+    <!-- amount -->
     <TextView
         android:id="@+id/textAmount"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="50000" />
+        android:gravity="center"
+        android:text="100,000" />
 
+    <!-- category -->
     <TextView
         android:id="@+id/textCategory"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="خوراکی" />
+        android:gravity="center"
+        android:text="خوراک" />
 
+    <!-- description -->
     <TextView
         android:id="@+id/textDescription"
         android:layout_width="0dp"
         android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:text="توضیح تستی" />
+        android:gravity="center"
+        android:text="توضیحات تست" />
+
+    <!-- menu icon (سه نقطه) -->
+    <ImageView
+        android:id="@+id/menu_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="menu"
+        android:padding="8dp"
+        android:src="@drawable/ic_more_vert" />
 </LinearLayout>
