--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- 🎨 رنگ‌های اصلی برنامه دخل و خرج -->
-    <color name="app_background">#E8F2FF</color> <!-- زمینه کلی خیلی کمرنگ -->
-    <color name="list_background">#D0E4FF</color> <!-- پس‌زمینه لیست -->
-    <color name="header_background">#B5D2FF</color> <!-- پس‌زمینه سربرگ جدول -->
-    <color name="balance_background">#A3C6FF</color> <!-- پس‌زمینه مانده -->
-    <color name="button_blue">#1E88E5</color> <!-- رنگ دکمه‌ها (مثل دکمه افزودن) -->
-    <color name="button_text">#FFFFFF</color> <!-- رنگ نوشته دکمه -->
-    <color name="text_dark">#0D1B2A</color> <!-- رنگ متن تیره -->
-
-    <!-- 💰 رنگ‌های ویژه تراکنش‌ها -->
-    <color name="green_income">#2E7D32</color> <!-- سبز برای درآمد -->
-    <color name="red_expense">#C62828</color> <!-- قرمز برای هزینه -->
-
-    <!-- رنگ‌های خاکستری برای جزئیات و مرزها -->
-    <color name="divider_gray">#CCCCCC</color>
-    <color name="hint_gray">#777777</color>
-
+    <color name="app_background">#E3F2FD</color>
+    <color name="button_blue">#0288D1</color>
+    <color name="button_text">#FFFFFF</color>
+    <color name="header_background">#BBDEFB</color>
+    <color name="list_background">#D9EDFF</color>
+    <color name="balance_background">#90CAF9</color>
+    <color name="text_dark">#111111</color>
+    <color name="amount_income">#2E7D32</color>
+    <color name="amount_expense">#C62828</color>
 </resources>
